2018-12-03  Joseph Myers  <joseph@codesourcery.com>

	* scripts/gen-as-const.py (compute_c_consts): Take an argument
	'START' to indicate that start text should be output.
	(gen_test): Likewise.
	(main): Generate 'START' for first symbol or '--' line, or at end
	of input if not previously generated.

2018-12-03  Rafael Ávila de Espíndola  <rafael@espindo.la>

	[BZ #19767]
	* sysdeps/unix/sysv/linux/arm/init-first.c: Remove #ifdef SHARED.
	* sysdeps/unix/sysv/linux/arm/libc-vdso.h: Remove #ifdef SHARED.
	* sysdeps/unix/sysv/linux/arm/sysdep.h: Define
	ALWAYS_USE_VSYSCALL.

2018-12-03  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #23913]
	* sysdeps/posix/spawni.c (maybe_script_execute): Increment size of
	new_argv by one.

2018-12-03  Carlos O'Donell  <carlos@redhat.com>

	[BZ #23923]
	* locale/programs/localedef.c: Declare boolean hard_links default true.
	(options): Add --no-hard-links option.
	(parse_opt): Add OPT_NO_HARD_LINKS case and set hard_links to false.
	* locale/programs/localedef.h: Declare prototype for hard_links.
	* locale/programs/locfile.c (write_locale_data): Don't use hard
	links if hard_links is false.

2018-12-03  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86/cacheinfo.c (intel_check_word): Updated for
	cpu_features_basic.
	(__cache_sysconf): Likewise.
	(init_cacheinfo): Likewise.
	* sysdeps/x86/cpu-features.c (get_extended_indeces): Also
	populate COMMON_CPUID_INDEX_80000007 and
	COMMON_CPUID_INDEX_80000008.
	(get_common_indices): Also populate COMMON_CPUID_INDEX_D_ECX_1.
	Use CPU_FEATURES_CPU_P (cpu_features, XSAVEC) to check if
	XSAVEC is available.  Set the bit_arch_XXX_Usable bits.
	(init_cpu_features): Use _Static_assert on
	index_arch_Fast_Unaligned_Load.
	__get_cpuid_registers and __get_arch_feature.  Updated for
	cpu_features_basic.  Set stepping in cpu_features.
	* sysdeps/x86/cpu-features.h: (FEATURE_INDEX_1): Changed to enum.
	(FEATURE_INDEX_2): New.
	(FEATURE_INDEX_MAX): Changed to enum.