@@ -1,3 +1,9 @@
+2018-12-03  DJ Delorie  <dj@delorie.com>
+
+	* support/test-container.c (check_for_unshare_hints): New.
+	(main): Call it if unshare fails.  Add support for "su" scriptlet
+	command.
+
 2018-12-03  Joseph Myers  <joseph@codesourcery.com>
 
 	* scripts/gen-as-const.py (compute_c_consts): Take an argument
